# ODYM

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  ODYM_Classifications_Master_V10.xlsx  ODYM_RECC_Config.xlsx  README.md  Requirements.txt  TODO.md  changelog.md  mkdocs.yaml  output.md  pyproject.toml  setup.py
.github/: publish_testpypi.yml  update_license.yml
.github/workflows/: publish_pypi.yml  test_package.yml
dev/: dev_configparsing.py  dev_pip_release.py
docs/: LogFileTest.md  ODYM Example and Tutorial No. 1. System with two processes, two parameters, one material..ipynb  ODYM Example and Tutorial No. 1. System with two processes, two parameters, one material.ipynb  ODYM Example and Tutorial No. 2. Alloying elements in recycling.ipynb  ODYM Example and Tutorial No. 3. Dynamic Stock modelling.ipynb  ODYM Example and Tutorial No. 3. Dynamic_Stock_modelling.ipynb  ODYM Example and Tutorial No. 4. ODYM_Database.ipynb  ODYM Example and Tutorial No. 5. MaterialContent_VehicleFleet.ipynb  ODYM Example and Tutorial No. 6. MaTrace.ipynb  ODYM_Classes.html  ODYM_Functions.html  ODYM_Model_Development_Log.md  _requirements.txt  about.md  changelog.md  dynamic_stock_model.html  faq.md  index.md  overview.md  todo.md
docs/.ipynb_checkpoints/: ODYM Example and Tutorial No. 4. ODYM_Database-checkpoint.ipynb  ODYM Example and Tutorial No. 5. MaterialContent_VehicleFleet-checkpoint.ipynb  ODYM Example and Tutorial No. 6. MaTrace-checkpoint.ipynb
docs/Files/: ElementContentMaterials_Tutorial.xlsx  ManufacturingYieldloss_Tutorial.xlsx  ODYM_Classifications_Master_Tutorial.xlsx  ODYM_Config_Tutorial.xlsx  ODYM_Config_Tutorial5.xlsx  ODYM_Tutorial5_EoLRecoveryRate.xlsx  ODYM_Tutorial5_VehicleLifetime.xlsx  ODYM_Tutorial5_VehicleMaterialContent.xlsx  ODYM_Tutorial5_VehicleNewRegistration.xlsx  ODYM_Tutorial5_VehicleStock2015.xlsx  ODYM_Tutorial6_EoLRecoveryRate_V1.0.xlsx  ODYM_Tutorial6_RemeltingYield_V1.0.xlsx  ODYM_Tutorial6_SectorSplit_V1.0.xlsx  ~$ODYM_Classifications_Master_Tutorial6_MaTrace.xlsx
docs/_css/: extra.css
docs/_files/: ElementContentMaterials_Tutorial.xlsx  ManufacturingYieldloss_Tutorial.xlsx  ODYM_Classifications_Master_Tutorial.xlsx  ODYM_Classifications_Master_Tutorial6_MaTrace.xlsx  ODYM_Config_Tutorial5.xlsx  ODYM_Config_Tutorial6.xlsx  ODYM_Tutorial5_VehicleLifetime.xlsx  ODYM_Tutorial6_FabricationYieldLoss_V1.0.xlsx  ODYM_Tutorial6_Lifetime_V1.0.xlsx  ODYM_Tutorial6_SteelConsumption_V1.0.xlsx  Steel_Consumption_Final_9Countries.xlsx  Steel_Lifetime_9Countries.xlsx
docs/_javascripts/: katex.js
docs/_overrides/: main.html
docs/api/: classes.md  dynamicstockmodel.md  functions.md
docs/notebooks/: ODYM Example and Tutorial No. 1. System with two processes, two parameters, one material.ipynb  ODYM Example and Tutorial No. 2. Alloying elements in recycling.ipynb  ODYM Example and Tutorial No. 3. Dynamic Stock modelling.ipynb
docs/sort/: index.html
docs/test/: DSM_test_known_results.html  ODYM_Classes_test_known_results.html  index.html  (+1 more)
odym/: ODYM_RECC_Basic1.py  ODYM_RECC_Test1.py  __init__.py  classes.py  dynamic_stock_model.py  functions.py
tests/: ODYM_Classes_test_known_results.py  ODYM_Functions_test_known_results.py  test_classes.py  test_dynamic_stock_model.py  test_functions.py
(+40 files in other folders)
