[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ODYM"
authors = [
  { name="Stefan Pauliuk", email="stefan.pauliuk@indecol.uni-freiburg.de " },
]
maintainers = [
  { name="Stefan Pauliuk", email="stefan.pauliuk@indecol.uni-freiburg.de " },
  { name="Michael Weinold", email="michaelphilippweinold+odym@gmail.com" }
]
description = "A Python package for dynamic material flow analysis (MFA)"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "openpyxl",
    "xlwt",
    "xlrd",
    "matplotlib",
    "pypandoc",
]

[project.urls]
source = "https://github.com/IndEcol/ODYM"
homepage = "https://odym.readthedocs.io"
tracker = "https://github.com/IndEcol/ODYM/issues"

[tool.setuptools.dynamic]
version = {attr = "odym.__version__"} 
readme = {file = "README.md"}

[tool.pytest.ini_options]
testpaths = ["tests/*.py"] 
